data/derived/comb/progs/unify/prog3332.ml.out
Characters 70-74:
  | [other::tail::[]] -> tail :: other;;
                         ^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
